PA3/cool.output
Terminals unused in grammar

   ERROR


State 15 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error class
    5           | class_list error class

    6 class: CLASS TYPEID inherits.opt '{' feature_list '}' ';'

    7 inherits.opt: %empty
    8             | INHERITS TYPEID

    9 feature_list: %empty
   10             | feature_list feature ';'
   11             | error ';'
   12             | feature_list error ';'

   13 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   14        | OBJECTID ':' TYPEID assign.opt

   15 assign.opt: %empty
   16           | ASSIGN expr

   17 formal_list: %empty
   18            | formal
   19            | formal_list ',' formal

   20 formal: OBJECTID ':' TYPEID

   21 let_expr: OBJECTID ':' TYPEID assign.opt IN expr
   22         | OBJECTID ':' TYPEID assign.opt ',' let_expr
   23         | error ',' let_expr

   24 expr: OBJECTID ASSIGN expr
   25     | expr '.' OBJECTID '(' arg_list ')'
   26     | expr '@' TYPEID '.' OBJECTID '(' arg_list ')'
   27     | OBJECTID '(' arg_list ')'
   28     | IF expr THEN expr ELSE expr FI
   29     | WHILE expr LOOP expr POOL
   30     | '{' expr_list '}'
   31     | LET let_expr
   32     | CASE expr OF case_list ESAC
   33     | NEW TYPEID
   34     | ISVOID expr
   35     | OBJECTID
   36     | INT_CONST
   37     | STR_CONST
   38     | BOOL_CONST
   39     | expr '+' expr
   40     | expr '-' expr
   41     | expr '*' expr
   42     | expr '/' expr
   43     | '~' expr
   44     | expr '<' expr
   45     | expr LE expr
   46     | expr '=' expr
   47     | NOT expr
   48     | '(' expr ')'

   49 expr_list: expr ';'
   50          | expr_list expr ';'
   51          | error ';'
   52          | expr_list error ';'

   53 arg_list: %empty
   54         | expr
   55         | arg_list ',' expr

   56 case_list: case_
   57          | case_list case_

   58 case_: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 25 26 27 48
')' (41) 13 25 26 27 48
'*' (42) 41
'+' (43) 39
',' (44) 19 22 23 55
'-' (45) 40
'.' (46) 25 26
'/' (47) 42
':' (58) 13 14 20 21 22 58
';' (59) 6 10 11 12 49 50 51 52 58
'<' (60) 44
'=' (61) 46
'@' (64) 26
'{' (123) 6 13 30
'}' (125) 6 13 30
'~' (126) 43
error (256) 4 5 11 12 23 51 52
CLASS (258) 6
ELSE (259) 28
FI (260) 28
IF (261) 28
IN (262) 21
INHERITS (263) 8
LET (264) 31
LOOP (265) 29
POOL (266) 29
THEN (267) 28
WHILE (268) 29
CASE (269) 32
ESAC (270) 32
OF (271) 32
DARROW (272) 58
NEW (273) 33
ISVOID (274) 34
STR_CONST (275) 37
INT_CONST (276) 36
BOOL_CONST (277) 38
TYPEID (278) 6 8 13 14 20 21 22 26 33 58
OBJECTID (279) 13 14 20 21 22 24 25 26 27 35 58
ASSIGN (280) 16 24
NOT (281) 47
LE (282) 45
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4 5, on right: 1 3 5
class (48)
    on left: 6, on right: 2 3 4 5
inherits.opt (49)
    on left: 7 8, on right: 6
feature_list (50)
    on left: 9 10 11 12, on right: 6 10 12
feature (51)
    on left: 13 14, on right: 10
assign.opt (52)
    on left: 15 16, on right: 14 21 22
formal_list (53)
    on left: 17 18 19, on right: 13 19
formal (54)
    on left: 20, on right: 18 19
let_expr (55)
    on left: 21 22 23, on right: 22 23 31
expr (56)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48, on right: 13 16 21 24 25 26 28 29 32 34 39
    40 41 42 43 44 45 46 47 48 49 50 54 55 58
expr_list (57)
    on left: 49 50 51 52, on right: 30 50 52
arg_list (58)
    on left: 53 54 55, on right: 25 26 27 55
case_list (59)
    on left: 56 57, on right: 32 57
case_ (60)
    on left: 58, on right: 56 57


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error . class

    CLASS  shift, and go to state 2

    class  go to state 6


State 2

    6 class: CLASS . TYPEID inherits.opt '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class
    5           | class_list . error class

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class_list: error class .

    $default  reduce using rule 4 (class_list)


State 7

    6 class: CLASS TYPEID . inherits.opt '{' feature_list '}' ';'

    INHERITS  shift, and go to state 11

    $default  reduce using rule 7 (inherits.opt)

    inherits.opt  go to state 12


State 8

    0 $accept: program $end .

    $default  accept


State 9

    5 class_list: class_list error . class

    CLASS  shift, and go to state 2

    class  go to state 13


State 10

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 11

    8 inherits.opt: INHERITS . TYPEID

    TYPEID  shift, and go to state 14


State 12

    6 class: CLASS TYPEID inherits.opt . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 13

    5 class_list: class_list error class .

    $default  reduce using rule 5 (class_list)


State 14

    8 inherits.opt: INHERITS TYPEID .

    $default  reduce using rule 8 (inherits.opt)


State 15

    6 class: CLASS TYPEID inherits.opt '{' . feature_list '}' ';'

    error  shift, and go to state 16

    error     [reduce using rule 9 (feature_list)]
    OBJECTID  reduce using rule 9 (feature_list)
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 17


State 16

   11 feature_list: error . ';'

    ';'  shift, and go to state 18


State 17

    6 class: CLASS TYPEID inherits.opt '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature ';'
   12             | feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 20
    '}'       shift, and go to state 21

    feature  go to state 22


State 18

   11 feature_list: error ';' .

    $default  reduce using rule 11 (feature_list)


State 19

   12 feature_list: feature_list error . ';'

    ';'  shift, and go to state 23


State 20

   13 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   14        | OBJECTID . ':' TYPEID assign.opt

    '('  shift, and go to state 24
    ':'  shift, and go to state 25


State 21

    6 class: CLASS TYPEID inherits.opt '{' feature_list '}' . ';'

    ';'  shift, and go to state 26


State 22

   10 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 27


State 23

   12 feature_list: feature_list error ';' .

    $default  reduce using rule 12 (feature_list)


State 24

   13 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 17 (formal_list)

    formal_list  go to state 29
    formal       go to state 30


State 25

   14 feature: OBJECTID ':' . TYPEID assign.opt

    TYPEID  shift, and go to state 31


State 26

    6 class: CLASS TYPEID inherits.opt '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 27

   10 feature_list: feature_list feature ';' .

    $default  reduce using rule 10 (feature_list)


State 28

   20 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 29

   13 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   19 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 30

   18 formal_list: formal .

    $default  reduce using rule 18 (formal_list)


State 31

   14 feature: OBJECTID ':' TYPEID . assign.opt

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 15 (assign.opt)

    assign.opt  go to state 36


State 32

   20 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


State 33

   13 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 38


State 34

   19 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 28

    formal  go to state 39


State 35

   16 assign.opt: ASSIGN . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 54


State 36

   14 feature: OBJECTID ':' TYPEID assign.opt .

    $default  reduce using rule 14 (feature)


State 37

   20 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 20 (formal)


State 38

   13 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 55


State 39

   19 formal_list: formal_list ',' formal .

    $default  reduce using rule 19 (formal_list)


State 40

   28 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 56


State 41

   31 expr: LET . let_expr

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    let_expr  go to state 59


State 42

   29 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 60


State 43

   32 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 61


State 44

   33 expr: NEW . TYPEID

    TYPEID  shift, and go to state 62


State 45

   34 expr: ISVOID . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 63


State 46

   37 expr: STR_CONST .

    $default  reduce using rule 37 (expr)


State 47

   36 expr: INT_CONST .

    $default  reduce using rule 36 (expr)


State 48

   38 expr: BOOL_CONST .

    $default  reduce using rule 38 (expr)


State 49

   24 expr: OBJECTID . ASSIGN expr
   27     | OBJECTID . '(' arg_list ')'
   35     | OBJECTID .

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 35 (expr)


State 50

   47 expr: NOT . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 66


State 51

   43 expr: '~' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 67


State 52

   30 expr: '{' . expr_list '}'

    error       shift, and go to state 68
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr       go to state 69
    expr_list  go to state 70


State 53

   48 expr: '(' . expr ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 71


State 54

   16 assign.opt: ASSIGN expr .
   25 expr: expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 16 (assign.opt)


State 55

   13 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 81


State 56

   25 expr: expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   28     | IF expr . THEN expr ELSE expr FI
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    THEN  shift, and go to state 82
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 57

   23 let_expr: error . ',' let_expr

    ','  shift, and go to state 83


State 58

   21 let_expr: OBJECTID . ':' TYPEID assign.opt IN expr
   22         | OBJECTID . ':' TYPEID assign.opt ',' let_expr

    ':'  shift, and go to state 84


State 59

   31 expr: LET let_expr .

    $default  reduce using rule 31 (expr)


State 60

   25 expr: expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   29     | WHILE expr . LOOP expr POOL
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LOOP  shift, and go to state 85
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 61

   25 expr: expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   32     | CASE expr . OF case_list ESAC
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    OF   shift, and go to state 86
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


State 62

   33 expr: NEW TYPEID .

    $default  reduce using rule 33 (expr)


State 63

   25 expr: expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   34     | ISVOID expr .
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 34 (expr)


State 64

   24 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 87


State 65

   27 expr: OBJECTID '(' . arg_list ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    $default  reduce using rule 53 (arg_list)

    expr      go to state 88
    arg_list  go to state 89


State 66

   25 expr: expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr
   47     | NOT expr .

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 47 (expr)


State 67

   25 expr: expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   43     | '~' expr .
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 43 (expr)


State 68

   51 expr_list: error . ';'

    ';'  shift, and go to state 90


State 69

   25 expr: expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr
   49 expr_list: expr . ';'

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80
    ';'  shift, and go to state 91


State 70

   30 expr: '{' expr_list . '}'
   50 expr_list: expr_list . expr ';'
   52          | expr_list . error ';'

    error       shift, and go to state 92
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '}'         shift, and go to state 93
    '('         shift, and go to state 53

    expr  go to state 94


State 71

   25 expr: expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr
   48     | '(' expr . ')'

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80
    ')'  shift, and go to state 95


State 72

   45 expr: expr LE . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 96


State 73

   44 expr: expr '<' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 97


State 74

   46 expr: expr '=' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 98


State 75

   39 expr: expr '+' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 99


State 76

   40 expr: expr '-' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 100


State 77

   41 expr: expr '*' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 101


State 78

   42 expr: expr '/' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 102


State 79

   26 expr: expr '@' . TYPEID '.' OBJECTID '(' arg_list ')'

    TYPEID  shift, and go to state 103


State 80

   25 expr: expr '.' . OBJECTID '(' arg_list ')'

    OBJECTID  shift, and go to state 104


State 81

   13 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 105


State 82

   28 expr: IF expr THEN . expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 106


State 83

   23 let_expr: error ',' . let_expr

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    let_expr  go to state 107


State 84

   21 let_expr: OBJECTID ':' . TYPEID assign.opt IN expr
   22         | OBJECTID ':' . TYPEID assign.opt ',' let_expr

    TYPEID  shift, and go to state 108


State 85

   29 expr: WHILE expr LOOP . expr POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 109


State 86

   32 expr: CASE expr OF . case_list ESAC

    OBJECTID  shift, and go to state 110

    case_list  go to state 111
    case_      go to state 112


State 87

   24 expr: OBJECTID ASSIGN expr .
   25     | expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 24 (expr)


State 88

   25 expr: expr . '.' OBJECTID '(' arg_list ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' arg_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr
   54 arg_list: expr .

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 54 (arg_list)


State 89

   27 expr: OBJECTID '(' arg_list . ')'
   55 arg_list: arg_list . ',' expr

    ')'  shift, and go to state 113
    ','  shift, and go to state 114


State 90

   51 expr_list: error ';' .

    $default  reduce using rule 51 (expr_list)


State 91

   49 expr_list: expr ';' .

    $default  reduce using rule 49 (expr_list)


State 92

   52 expr_list: expr_list error . ';'

    ';'  shift, and go to state 115


State 93

   30 expr: '{' expr_list '}' .

    $default  reduce using rule 30 (expr)


State 94
